# blog

./: .config.mk  .dockerignore  .env.example  .env.production  .env.test  .gitignore  .gitleaksignore  .llvm-cov.toml  .markdownlint-cli2.yaml  .semgrep.yml  .surrealdb  ACTIVITY_TESTS_SUMMARY.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  MIGRATIONS_YML_FIXES.md  Makefile  Makefile.toml  PLAN.md  PR_READINESS_STATUS.md  Procfile  README.md  RUST_YML_FIX_SUMMARY.md  SECURITY.md  TODO.md  VALIDATION_CHECKLIST.md  audit.toml  build.rs  commit_msg.txt  db.sh  ensure-db-ready.sh  gen_self_signed_certs.sh  history.txt  init-db.sh  leptos.toml  openapi.yaml  package-lock.json  package.json  pyproject.toml  (+5 more)
.attune/: mission-state.json
.cargo/: audit.toml  config.toml
.claude/commands/: deploy-logs.md  deploy-status.md  docker-push.md  security-audit.md  validate-assets.md
.claude/hooks/: prevent-secret-commit.md  warn-secret-in-spec.md
.claude/skills/: deployment-debugging.md
.config/: nextest.toml
.config/nextest/: nextest.toml
.do/: app.yaml  nginx.conf  surrealdb.toml
.github/: ENVIRONMENT_SETUP.md  TIMEOUT_CONFIGURATION.md  scripts-checksums.sha256
.github/config/: pr-size-limits.yml
.github/metrics/: README.md  pr-size-history.csv
.github/reports/: README.md  pr_size_trend.md
.github/workflows/: README.md  ci-cd.yml  ci-docker-pr.yml  claude-code-review.yml  claude.yml  deploy.yml  docker-build-test.yml  migrations.yml  pr-size-check.yml  pr-size-metrics.yml  pr-size-trend-report.yml  rust.yml  secrets-scan.yml  server-integration-tests.yml
app/: Cargo.toml
app/src/: about.rs  activity.rs  api.rs  archive.rs  colophon.rs  components.rs  contact.rs  home.rs  lib.rs  notes.rs  post.rs  references.rs  types.rs
app/src/components/: date_stamp.rs  error_template.rs  footer.rs  header.rs  icons.rs  loader.rs  nameplate.rs  pipe_nav.rs  post_list_row.rs  tag_strip.rs  toc.rs
docs/: MISSION-REPORT.md  design-system.md  implementation-plan.md  project-brief.md  specification.md
events/: post_activity.surql
frontend/: Cargo.toml
frontend/src/: lib.rs
githooks/: pre-commit
markdown/: Cargo.toml
markdown/src/: lib.rs
migrations/: 0001_initial_schema.surql  0002_add_indexes.surql  0003_add_comments.surql  0005_add_post_activity_event.surql
migrations/definitions/: _initial.json
reviews/: pr-69-multiagent-review.md  pr-69-review.md  pr-69-test-plan.md
schemas/: activity.surql  author.surql
schemas/schemas/: post.surql
scripts/: README.md  backfill_activity_ids.sh  calculate_pr_size.sh  categorize_pr_size.sh  chart_generators.py  db.sh  ensure-db-ready.sh  init-db.sh  lint-markdown.sh  lint_tokens.sh  load_pr_config.sh  pr_metrics.py  report_generator.py  requirements.txt  run-production-container.sh  run_integration_tests.sh  run_secret_scan.sh  stop-db.sh  test-production-config.sh  tunnel.sh  validate_ci_env.sh  validate_migrations.sh  visualize_pr_trends.py  visualize_pr_trends_original.py
server/: Cargo.toml
server/src/: main.rs  redirect.rs  security.rs  utils.rs  validation.rs
shared_utils/: Cargo.toml
shared_utils/src/: lib.rs
src/: main.rs
src/server/: mod.rs  redirect.rs
style/: main.scss  tailwind.css
test_results/: test_report.txt
tests/: README.md  activity_error_tests.rs  activity_feed_tests.rs  activity_test_api.rs  activity_unit_tests.rs  conftest.py  migration_core_tests.rs  schema_evolution_tests.rs  server_integration_tests.rs  server_integration_tests_ci.rs  server_unit_tests.rs  test_chart_generators.py  test_pr_metrics.py  test_report_generator.py  test_shell_scripts.bats  test_visualize_pr_trends.py
tests/harness/: mod.rs
wiki/: API-Reference.md  Architecture.md  Development-Workflow.md  Home.md  Security-Guide.md  _Sidebar.md
