[workspace]
resolver = "2"
members = ["app", "frontend", "markdown", "server"]

[workspace.package]
version = "0.1.0"
authors = ["Alex Thola <alexthola@gmail.com>"]
license = "0BSD"
description = "A public webblog"
homepage = "https://github.com/athola/blog"
repository = "https://github.com/athola/blog"
readme = "https://github.com/athola/blog/README.md"
documentation = "https://github.com/athola/blog/docs"
keywords = ["axum", "blog", "leptos", "web", "website"]
categories = ["website"]
edition = "2024"

[workspace.dependencies]
axum = { version = "0.7.9", features = ["macros"] }
cfg-if = "1"
chrono = "0.4.41"
leptos = { version = "0.7.8", features = ["rustls", "nightly"] }
leptos_axum = "0.7.8"
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = { version = "2.3.7", features = ["protocol-http"] }
tracing = "0.1"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[[workspace.metadata.leptos]]
# This name is used for the WASM, JS, and CSS file names.
name = "blog"

# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle.
# Defaults to the crate name.
output-name = "blog"

# The package in the workspace which contains the server binary (binary crate).
bin-package = "server"

# The package in the workspace that contains the frontend wasm binary (library crate).
lib-package = "frontend"

# The site root directory is where cargo-leptos generates all output.
# WARNING: all content of this directory will be erased upon rebuild. Use in ssr setup.
site-root = "target/site"

# The site-root relative directory where all compiled output (JS, WASM and CSS) is written.
# Defaults to pkg.
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS.
# The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css.
tailwind-input-file = "style/tailwind.css"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a subdirectory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the ssr serves the onteent. Use in ssr setup.
site-addr = "127.0.0.1:3007"

# The port to use for automatic reload monitoring.
reload-port = 3001

# [Optional] Command to use when running e2e tests. It will run in the e2e dir.
#  [Windows] for non-WSL use "npx.cmd playwright test"
#  This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

# The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD".
env = "DEV"

# The feautres to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features.
bin-features = []

# If the --no-default-features flag should be used when compiling the bin target.
#
# Optional. Defaults to false.
bin-default-feaures = false

# The features to use when compiling the lib target.
#
# Optional. Can be over-ridden with the command line parameter --lib-features.
lib-features = []

# If the --no-default-features flag should be used when compiling the lib target.
#
# Optional. Defaults to false.
lib-default-feaures = false

# The profile to use for the lib target when compiling for release.
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
