[package]
name = "app"
version = "0.1.0"
authors = ["Alex Thola <alexthola@gmail.com>"]
license = "0BSD"
description = "A public webblog app"
homepage = "https://github.com/athola/blog"
repository = "https://github.com/athola/blog"
readme = "https://github.com/athola/blog/README.md"
documentation = "https://github.com/athola/blog/docs"
keywords = ["axum", "blog", "leptos", "web", "website"]
categories = ["website"]
edition = "2024"

[dependencies]
# local dependencies
markdown = { path = "../markdown", default-features = false, features = ["ssr"], optional = true }

# workspace dependencies
axum = { workspace = true, optional = true }
chrono.workspace = true
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
serde.workspace = true
surrealdb.workspace = true
tracing = { workspace = true, optional = true }

# specific dependencies
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }
http = "1"
icondata = "0.5.0"
leptos_icons = "0.5.0"
leptos_meta = "0.7.8"
leptos_router = { version = "0.7.8", features = ["nightly"] }
lettre = { version = "0.11.18", default-features = false, optional = true, features = [
    "builder",
    "smtp-transport",
    "rustls-tls",
    "tokio1",
    "tokio1-rustls-tls",
] }
thiserror = "2"
web-sys = "0.3.78"

[features]
hydrate = ["leptos/hydrate", "dep:getrandom"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:axum",
    "dep:leptos_axum",
    "dep:lettre",
    "dep:markdown",
    "dep:tracing",
]
