[package]
name = "app"

authors = ["Alex Thola <alexthola@gmail.com>"]
license = "0BSD"
description = "A public webblog app"
homepage = "https://github.com/athola/blog"
repository = "https://github.com/athola/blog"
readme = "https://github.com/athola/blog/README.md"
documentation = "https://github.com/athola/blog/docs"
keywords = ["axum", "blog", "leptos", "web", "website"]
categories = ["website"]
edition = "2024"

[dependencies]
# local dependencies
markdown = { path = "../markdown", default-features = false, features = ["ssr"], optional = true }

# workspace dependencies
axum = { workspace = true, optional = true }
chrono.workspace = true
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
serde.workspace = true
surrealdb.workspace = true
tracing = { workspace = true, optional = true }
tokio-retry = { workspace = true, optional = true }

# specific dependencies
http = "1"
icondata = "0.6.0"
icons = "0.8.4"
lettre = { version = "0.11.18", default-features = false, optional = true, features = [
    "builder",
    "smtp-transport",
    "rustls-tls",
    "tokio1",
    "tokio1-rustls-tls",
] }
thiserror = "2"
web-sys = "0.3.80"

[dev-dependencies]
tokio-test = "0.4.4"
mockall = "0.13.1"
assert_matches = "1.5.0"
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:axum",
    "dep:leptos_axum",
    "dep:lettre",
    "dep:markdown",
    "dep:tracing",
    "dep:tokio-retry",
]
