[package]
name = "frontend"
version = "0.1.0"
authors = ["Alex Thola <alexthola@gmail.com>"]
license = "0BSD"
description = "A public webblog frontend"
homepage = "https://github.com/athola/blog"
repository = "https://github.com/athola/blog"
readme = "https://github.com/athola/blog/README.md"
documentation = "https://github.com/athola/blog/docs"
keywords = ["axum", "blog", "leptos", "web", "website"]
categories = ["website"]
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# local dependencies
app = { path = "../app", default-features = false, features = [
    "hydrate",
] }

# specific dependencies
console_error_panic_hook = "0.1"
console_log = "1"

# workspace dependencies
leptos = { workspace = true, features = ["hydrate"] }
log = "0.4.28"
wasm-bindgen = "0.2.108"

# WASM-specific dependencies with proper backend configuration
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
