[package]
name = "frontend"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "A public webblog frontend"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# local dependencies
app = { path = "../app", default-features = false, features = [
    "hydrate",
] }

# specific dependencies
console_error_panic_hook = "0.1"
console_log = "1"

# workspace dependencies
leptos = { workspace = true, features = ["hydrate"] }
log = "0.4.29"
wasm-bindgen = "0.2.114"

# WASM-specific dependencies with proper backend configuration
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
