[package]
name = "markdown"
version = "0.1.0"
authors = ["Alex Thola <alexthola@gmail.com>"]
license = "0BSD"
description = "A public webblog markdown organizer"
homepage = "https://github.com/athola/blog"
repository = "https://github.com/athola/blog"
readme = "https://github.com/athola/blog/README.md"
documentation = "https://github.com/athola/blog/docs"
keywords = ["axum", "blog", "leptos", "web", "website"]
categories = ["website"]
edition = "2024"

[dependencies]
# workspace dependencies
leptos = { workspace = true, features = ["ssr"]}

# specific dependencies
katex = { version = "0.4.6", default-features = false, features = ["duktape"] }
pulldown-cmark = "0.13.0"
regex = "1.11.2"
syntect = "5.2.0"

[features]
ssr = ["leptos/ssr"]
