[package]
name = "markdown"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "A public webblog markdown organizer"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition = "2024"

[features]
ssr = ["leptos/ssr"]

[dependencies]

# specific dependencies
katex = { version = "0.4.6", default-features = false, features = ["duktape"] }
# workspace dependencies
leptos = { workspace = true, features = ["ssr"] }
pulldown-cmark = "0.13.1"
regex = "1.12.3"
syntect = { version = "5.3.0", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "html", "regex-onig"] }
