[package]
name = "server"
version = "0.1.0"
authors = ["Alex Thola <alexthola@gmail.com>"]
license = "0BSD"
description = "A public webblog server"
homepage = "https://github.com/athola/blog"
repository = "https://github.com/athola/blog"
readme = "https://github.com/athola/blog/README.md"
documentation = "https://github.com/athola/blog/docs"
keywords = ["axum", "blog", "leptos", "web", "website"]
categories = ["website"]
edition = "2024"

[dependencies]
# local dependencies
app = { path = "../app", default-features = false, features = ["ssr"] }
markdown = { path = "../markdown", default-features = false, features = ["ssr"] }

# workspace dependencies
axum.workspace = true
chrono.workspace = true
leptos_axum.workspace = true
leptos = { workspace = true, features = ["ssr"] }
serde.workspace = true
surrealdb.workspace = true
tracing.workspace = true
tokio-retry.workspace = true

# leptos config dependency
leptos_config = "0.7.8"

# specific dependencies
dotenvy = "0.15.7"
rss = "2.0.12"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
    "compression-br",
    "compression-deflate",
    "compression-gzip",
    "compression-zstd",
    "cors",
    "fs",
    "trace",
] }
tracing-subscriber = "0.3.20"

[dev-dependencies]
tokio-test = "0.4.4"
mockall = "0.13.1"
assert_matches = "1.5.0"
