[package]
name = "server"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "A public webblog server"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition = "2024"

[dependencies]
# local dependencies
app = { path = "../app", default-features = false, features = ["ssr"] }

# workspace dependencies
axum.workspace = true
chrono.workspace = true

# specific dependencies
dotenvy = "0.15.7"
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true

# leptos config dependency
leptos_config = "0.8.8"
markdown = { path = "../markdown", default-features = false, features = ["ssr"] }
rss = "2.0.12"
serde.workspace = true
serde_json = "1.0"
shared_utils.workspace = true
surrealdb.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-retry.workspace = true
tower = "0.5.3"
tower-http = { version = "0.6.8", features = [
    "compression-br",
    "compression-deflate",
    "compression-gzip",
    "compression-zstd",
    "cors",
    "fs",
    "trace",
] }
tracing.workspace = true
tracing-subscriber = "0.3.22"

[dev-dependencies]
assert_matches = "1.5.0"
mockall = "0.14.0"
serial_test = "3.4"
tokio-test = "0.4.4"
